# amodus

./: README.md  format.sh  md  test_cli.sh
.github/workflows/: build.yaml  build.yml
cli/: Cargo.toml
cli/src/: build.rs  install.rs  main.rs  new.rs  util.rs
cli/templates/: Cargo.toml.template  lib.rs.template  mod.toml.template
injector/: Cargo.toml
injector/src/: main.rs
licenses/: LICENSE_APACHE
proc/: Cargo.toml
proc/src/: lib.rs
runtime/: Cargo.toml  build.sh  format.sh  version.def
runtime/.cargo/: config.toml
runtime/mod/: mod.toml  mod.wasm
runtime/src/: lib.rs  link.rs  load.rs  meta.rs  proxy.rs  util.rs
sdk/: Cargo.toml
sdk/src/: lib.rs  log.rs
susio/: Cargo.toml
susio/src/: lib.rs
