[package]
name = "amodus_injector"
version = "0.1.1"
edition = "2024"
description = "Among Us launcher which injects the Amodus runtime into Among Us so you can use mods."
license = "Apache-2.0 or MIT"
repository = "https://www.github.com/Gamer069/amodus"

[dependencies]
dll-syringe = "0.17.1"
reqwest = { version = "0.12.26", features = ["blocking"] }
steamlocate = "2.0.1"
