[package]
name = "amodus_proc"
version = "0.1.0"
edition = "2024"
description = "Proc SDK for making mods for the Amodus modloader"
license = "Apache-2.0 OR MIT"
repository = "https://www.github.com/Gamer069/amodus"

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full"] }

[lib]
proc-macro = true
