[package]
name = "amodus_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
susio = { version = "0.1.0", path = "../susio" }
tempfile = "3.24.0"
toml = "0.9.10"
wasmtime = { version = "40.0.0", features = ["cranelift", "runtime", "threads", "wat"], default-features = false }

[lib]
crate-type = ["cdylib"]

[package.metadata.windows]
def-file = "version.def"
